--- a/css/style.css
+++ b/css/style.css
@@ -225,15 +225,17 @@ p{
 .logo{
     background: url("../images/36krlogo.png") no-repeat scroll 0 0 transparent;
     height: 47px;
-    left: 125px;
+    left: 20px;
+    width:1224px;
+    margin:-80px auto;
     position: relative;
-    bottom: -1924px;
 }
 
 .ps{
     text-align: right;
-    margin-top: -70px;
-    right: 100px;
+    width:1224px;
+    margin:-40px auto;
+    right:20px;
     position: relative;
 }
 
