--- a/css/style.css
+++ b/css/style.css
@@ -217,7 +217,7 @@ p{
     height: 47px;
     left: 20px;
     width: 1224px;
-    margin: -80px auto;
+    margin: 50px auto 10px auto;
     position: relative;
 }
 
